--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+=============== 
+Fonts
+===============
+*/
+@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+
+/*
+=============== 
+Variables
+===============
+*/
+:root {
+  /* primary color */
+  --clr-primary-cyan: hsl(176, 50%, 47%);
+  --clr-primary-darkcyan: hsl(176, 72%, 28%);
+  /* neutral */
+  --clr-black: hsl(0, 0%, 0%);
+  --clr-darkgrey: hsl(0, 0%, 48%);
+  /* font */
+  --ff-primary: 'sans-serif';
+  --ff-secondary: 'Commissioner';
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*
+=============== 
+Global Styles
+===============
+*/
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: var(--ff-primary);
+  font-size: 1rem;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  display: block;
+}
+
