--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 Fonts
 ===============
 */
-@import url('https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap");
 
 /*
 =============== 
@@ -16,10 +16,13 @@ Variables
   --clr-primary-darkcyan: hsl(176, 72%, 28%);
   /* neutral */
   --clr-black: hsl(0, 0%, 0%);
+  --clr-white: #fff;
   --clr-darkgrey: hsl(0, 0%, 48%);
   /* font */
-  --ff-primary: 'sans-serif';
-  --ff-secondary: 'Commissioner';
+  --ff-primary: "sans-serif";
+  --ff-secondary: "Commissioner";
+  /* border radius */
+  --radius: 10px;
 }
 
 /*
@@ -27,7 +30,9 @@ Variables
 Global Styles
 ===============
 */
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -46,8 +51,7 @@ a {
   text-decoration: none;
 }
 
-img {
+/* img {
   width: 100%;
   display: block;
-}
-
+} */
